--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Trabalho001</string>
-    <string name="button_add_repos">Adicionar Repositório</string>
-    <string name="hint_add_repos">owner/repo</string>
+    <string name="app_name">Github User Finder</string>
+    <string name="button_add_repos">+</string>
+    <string name="hint_add_repos">Adicionar Usuário</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
