--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
     <string name="error">Ocorreu um erro </string>
     <string name="user_added_success">Usuário adicionado</string>
     <string name="no_user_error">Nenhum usuário encontrado</string>
-    <string name="no_repositories_error">Este usuário não possui nenhum repositório com estrela</string>
+    <string name="no_repositories_error">Este usuário não deu estrela para nenhum repositório</string>
 </resources>
